correção de alguns issues do sonar